--- a/html/downloadCourse.html
+++ b/html/downloadCourse.html
@@ -25,6 +25,7 @@
 		<script type="text/javascript" src="../js/view.js"></script>
 		<script type="text/javascript" src="../js/file.js"></script>
 		<script type="text/javascript" src="../js/voicecode.js"></script>
+		<script type="text/javascript" src="../js/common.js" ></script>
 
 		<header id="header" class="mui-bar mui-bar-nav navbar">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
@@ -82,6 +83,7 @@
 					languageType = self.languageType;
 
 					queryDownloadedCourse();
+					
 				});
 			};
             function contentHeight() {
