--- a/html/downloadCourse.html
+++ b/html/downloadCourse.html
@@ -229,7 +229,7 @@
 						var newCourse = allList[j];
 						
 						if (oldCourse == null || newCourse == null) {
-							mui.toast('查询课程出现错误，请稍候重试');
+							//mui.toast('查询课程出现错误，请稍候重试');
 							hideProgressDialog();
 							break;
 						}
